rename directories for static files

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,8 @@ doctype html
 html
   head
     title=title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    script(type='text/javascript', src='/javascripts/lib.js')
-    script(type='text/javascript', src='/javascripts/brew-test.js')
+    link(rel='stylesheet', href='/css/style.css')
+    script(type='text/javascript', src='/js/lib.js')
+    script(type='text/javascript', src='/js/brew-test.js')
   body(ng-app='brewtest')
     block content
