Add byline for current brew.

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,7 @@ block content
       p
         label Current Brew:&nbsp
         a(href='https://www.brewersfriend.com/homebrew/recipe/view/492749/first-crack-pseudo-lager-') Pseudo Lager
+        &nbsp(Lager malts with Ale Yeast)
       p
         label Stage:
         &nbspFermentation
