change details to new beer

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,11 +8,11 @@ block content
       p Welcome to #{title}
       p
         label Current Brew:&nbsp
-        a(href='https://www.brewersfriend.com/homebrew/recipe/view/492749/first-crack-pseudo-lager-') Pseudo Lager
-        &nbsp(Lager malts with Ale Yeast)
+        a(href='https://www.brewersfriend.com/homebrew/recipe/view/495556/hefe') Hefe
+        &nbsp(Hefeweizen)
       p
         label Stage:
-        &nbspFermentation
+        &nbspFermentation (started 7th June 2017)
       p
         label Last Recorded Temp:
         &nbsp{{ chartData[0].values[chartData[0].values.length - 1].y }} at {{ chartData[0].values[chartData[0].values.length - 1].x.toString() }}
