--- a/views/index.jade
+++ b/views/index.jade
@@ -14,9 +14,9 @@ block content
         &nbspFermentation (started {{ currentBrew.startDT | date }})
       p
         label Last Recorded Temp:
-        &nbsp{{ chartData[0].values[chartData[0].values.length - 1].y }} at {{ chartData[0].values[chartData[0].values.length - 1].x.toString() }}
+        &nbsp{{ brewData[0].y[brewData[0].y.length - 1] }} at {{ brewData[0].x[brewData[0].x.length - 1].toString() }}
       p
         label Live Temp:
         &nbsp{{ liveTemp }}
     .row
-      nvd3(options='chartOptions', data='chartData')
+      div(id='brewGraph')
