--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
     title=title
     link(rel='stylesheet', href='/css/lib.css')
     link(rel='stylesheet', href='/css/site.css')
+    script(type='text/javascript', src='https://cdn.plot.ly/plotly-1.2.0.min.js')
     script(type='text/javascript', src='/js/lib.js')
     script(type='text/javascript', src='/js/brewtest.js')
   body(ng-app='brewtest')
