--- a/views/index.jade
+++ b/views/index.jade
@@ -2,21 +2,36 @@ extends layout
 
 block content
   div(ng-controller='homeCtrl', class='container')
-    .page-header
-      h1=title
     .row
-      p Welcome to #{title}
-      p
-        label Current Brew:&nbsp
-        a(href='{{ currentBrew.recipeUrl }}') {{ currentBrew.name }}
-      p
-        label Stage:
-        &nbspFermentation (started {{ currentBrew.startDT | date }})
-      p
-        label Last Recorded Temp:
-        &nbsp{{ brewData[0].y[brewData[0].y.length - 1] }} at {{ brewData[0].x[brewData[0].x.length - 1].toString() }}
-      p
-        label Live Temp:
-        &nbsp{{ liveTemp }}
+      .col-md-12
+        h2=title
+        hr
     .row
-      div(id='brewGraph')
+      .col-md-6
+        .panel.panel-default
+          .panel-heading
+            label Welcome to #{title}
+          .panel-body
+            p
+              label Current Brew:&nbsp
+              a(href='{{ currentBrew.recipeUrl }}') {{ currentBrew.name }}
+            p
+              label Stage:
+              &nbspFermentation (started {{ currentBrew.startDT | date }})
+            p
+              label Last Recorded Temp:
+              &nbsp{{ brewData[0].y[brewData[0].y.length - 1] }} at {{ brewData[0].x[brewData[0].x.length - 1].toString() }}
+      .col-md-6
+        .panel.panel-default
+          .panel-heading
+            label Live Temp
+          .panel-body
+            h1
+              &nbsp{{ liveTemp }}°C
+    .row
+      .col-md-12
+        .panel.panel-default
+          .panel-heading
+            label Brew Temperature
+          .panel-body
+            div(id='brewGraph')
