--- a/views/index.jade
+++ b/views/index.jade
@@ -10,10 +10,10 @@ block content
       .col-sm-9.col-md-6
         .panel.panel-default
           .panel-heading
-            label Welcome to #{title}
+            label Current Brew
           .panel-body
             p
-              label Current Brew:&nbsp
+              label Name:&nbsp
               a(href='{{ currentBrew.recipeUrl }}') {{ currentBrew.name }}
             p
               label Stage:
@@ -32,6 +32,6 @@ block content
       .col-md-12
         .panel.panel-default
           .panel-heading
-            label Brew Temperature
+            label Brew Temperature (Last 24 Hours)
           .panel-body
             div(id='brewGraph')
