updated history view

--- a/views/history.jade
+++ b/views/history.jade
@@ -11,10 +11,10 @@ block content
         .col-sm-12
           .panel.panel-default
             .panel-heading
-              label Welcome to #{title}
+              label #{brew.name}
             .panel-body
               p
-                label Current Brew:&nbsp
+                label Recipe:&nbsp
                 a(href=brew.recipeUrl) #{brew.name}
               p
                 label Stage:
