--- a/views/index.jade
+++ b/views/index.jade
@@ -27,7 +27,9 @@ block content
             label Live Temp
           .panel-body
             h1
-              &nbsp{{ liveTemp }}°C
+              &nbsp{{ liveTemp }}°C 
+            h3
+              &nbsp{{ ((liveTemp * 9) / 5) + 32 | number:1 }}°F
     .row
       .col-md-12
         .panel.panel-default
