created edit page, updated http authentication to use non-published credentials

--- a/views/brewlist.jade
+++ b/views/brewlist.jade
@@ -20,4 +20,4 @@ block content
                 label Stage:
                 &nbspFermentation (started #{brew.startDT})
               p
-                a(href=brew._id) Edit Brew
+                a(href='/control/brew/' + brew._id) Edit Brew
