--- a/views/brewlist.jade
+++ b/views/brewlist.jade
@@ -17,7 +17,7 @@ block content
                 label Recipe:&nbsp
                 a(href=brew.recipeUrl) #{brew.name}
               p
-                label Stage:
-                &nbspFermentation (started #{brew.startDT})
+                label Stage:&nbsp
+                Fermentation (started #{brew.startDT})
               p
                 a(href='/control/brew/' + brew._id) Edit Brew
