Move list/edit to the history page (the added page was superfluous).  Still need to create the brew 'control' page and the new brew page.

--- a/views/editbrew.jade
+++ b/views/editbrew.jade
@@ -44,3 +44,30 @@ block content
               .form-group
                 .col-sm-offset-2.col-sm-10
                   input.form-control(type='submit', value='Edit Brew')
+          .panel-body
+            form.form-horizontal
+              .form-group
+                  label.control-label.col-sm-2 Timestamp:
+                  .col-sm-10
+                    p.form-control 2018-09-24T08:00:00-08:00
+              .form-group
+                label.control-label.col-sm-2 Step:
+                .col-sm-10
+                  select.form-control(name='step', value='')
+                    option Mash Complete
+                    option Boil Complete
+                    option Added to Fermenter
+                    option Sample
+                    option Fermentation Complete
+              .form-group
+                label.control-label.col-sm-2 SG Reading:
+                .col-sm-10
+                  input.form-control(type='text', name='sg')
+              .form-group
+                label.control-label.col-sm-2 Volume:
+                .col-sm-10
+                  input.form-control(type='text', name='vol')
+              .form-group
+                label.control-label.col-sm-2 Notes:
+                .col-sm-10
+                  textarea(cols=30, rows=5)
