--- a/views/history.jade
+++ b/views/history.jade
@@ -12,6 +12,8 @@ block content
           .panel.panel-default
             .panel-heading
               label #{brew.name}
+              span.pull-right
+                a(href='/control/brew/' + brew._id) Edit Brew
             .panel-body
               p
                 label Recipe:&nbsp
