--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,13 +28,7 @@ html
               a(href='#contact') Contact
           ul.nav.navbar-nav.navbar-right
             li
-              a.dropdown-toggle(href='#', data-toggle='dropdown', role='button') Control
-                span.caret
-              ul.dropdown-menu
-                li
-                  a(href='/control/new') New Brew
-                li
-                  a(href='/control/brewlist') Brews
+              a(href='#control') Control
     .container
       block content
     .container
