add new brew feature

--- a/views/history.jade
+++ b/views/history.jade
@@ -5,6 +5,8 @@ block content
     .row
       .col-md-12
         h2=title
+          span.pull-right
+            a(href='/control/brew/') New Brew
         hr
     for brew in brews    
       .row(name=brew._id)
