--- a/views/editbrew.jade
+++ b/views/editbrew.jade
@@ -16,7 +16,7 @@ block content
           .panel-heading
             label Edit Brew
           .panel-body
-            form.form-horizontal(action='/control/brew/' + brew._id, method='post')
+            form.form-horizontal(action='/control/brew/' + (brew._id ? brew._id : ''), method='post')
               .form-group
                 label.control-label.col-sm-2 Brew Name:
                 .col-sm-10
@@ -43,7 +43,10 @@ block content
                   p.form-control #{brew.tempData.length} record(s).
               .form-group
                 .col-sm-offset-2.col-sm-10
-                  input.form-control(type='submit', value='Edit Brew')
+                  if brew._id
+                    input.form-control(type='submit', value='Edit Brew')
+                  else
+                    input.form-control(type='submit', value='Create Brew')
           .panel-body
             form.form-horizontal
               .form-group
